--- a/src/app/components/production/mixing/select-fibre-stock/select-fibre-stock.component.html
+++ b/src/app/components/production/mixing/select-fibre-stock/select-fibre-stock.component.html
@@ -21,7 +21,7 @@
 
       <!-- fibre Column -->
       <ng-container matColumnDef="fibre">
-        <th mat-header-cell *matHeaderCellDef>Fibre</th>
+        <th mat-header-cell *matHeaderCellDef>Fibre Name</th>
         <td mat-cell *matCellDef="let element">{{ element.fibreType }}</td>
       </ng-container>
 
