--- a/src/app/components/sales/deliveries/deliveries.component.scss
+++ b/src/app/components/sales/deliveries/deliveries.component.scss
@@ -36,12 +36,16 @@
 }
 
 .mat-mdc-paginator {
-  border-top: 1px solid #e0e0e0;
   padding: 8px 0;
 }
 
 .table-container {
   position: relative;
+  background-color: #fff;
+}
+
+table {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .loader {
