--- a/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.html
+++ b/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.html
@@ -1,7 +1,9 @@
 <section *ngIf="printService.yarnDCPrint" class="container print">
   <section class="header">
     <div class="header-content">
-      <div class="logo-img"></div>
+      <div class="logo-img">
+        <img src="../../../../assets/images/print/amman.svg" />
+      </div>
       <div class="details text-center w-100">
         <div class="font-size-12">OM SHRI RAMAJAYAM</div>
         <div class="text-left">GSTIN: 33AAKCS5785R1ZC</div>
