--- a/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.scss
+++ b/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.scss
@@ -16,10 +16,9 @@
     padding-bottom: 4px;
   }
 
-  .logo-img {
+  .logo-img img {
     width: 100px;
     height: 120px;
-    background: url("../../../../assets/images/print/amman.svg");
     background-size: cover;
     margin: 0 8px;
   }
