--- a/src/app/components/sales/search-sales-order/order-details/order-details.component.html
+++ b/src/app/components/sales/search-sales-order/order-details/order-details.component.html
@@ -118,7 +118,7 @@
     <tr mat-footer-row *matFooterRowDef="columnsToDisplay; sticky: true"></tr>
   </table>
 </div>
-<!-- <div mat-dialog-actions class="footer">
+<div mat-dialog-actions class="footer">
   <button mat-raised-button color="primary" (click)="updateOrder()">
     Update Order
   </button>
@@ -128,4 +128,4 @@
   <button mat-raised-button color="primary" (click)="reopenOrder()">
     Reopen Order
   </button>
-</div> -->
+</div>
