--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,6 +109,14 @@ app-print-delivery-invoice {
   width: 70%;
 }
 
+.w-90 {
+  width: 90%;
+}
+
+.w-95 {
+  width: 95%;
+}
+
 .w-100 {
   width: 100%;
 }
