--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.scss
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.scss
@@ -55,7 +55,7 @@
 .footer {
   margin-top: 50px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .mat-mdc-table-sticky {
