--- a/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.html
+++ b/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <h1 class="header letter-spacing-1">Search Fibre PO</h1>
+  <h1 class="header letter-spacing-1">Search Received Fibre PO</h1>
   <section>
     <form class="form-container" [formGroup]="form">
       <mat-form-field appearance="fill" class="w-35">
@@ -111,16 +111,14 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="pono">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>PONo</th>
-        <td mat-cell *matCellDef="let element">{{ element.pono }}</td>
+      <ng-container matColumnDef="recdDCNo">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>ReceivedDCNo</th>
+        <td mat-cell *matCellDef="let element">{{ element.recdDCNo }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="podate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>PODate</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.podate | date : "dd/MM/yyy" }}
-        </td>
+      <ng-container matColumnDef="recdDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>ReceivedDate</th>
+        <td mat-cell *matCellDef="let element">{{ element.recdDate }}</td>
       </ng-container>
 
       <ng-container matColumnDef="partyName">
@@ -128,19 +126,9 @@
         <td mat-cell *matCellDef="let element">{{ element.partyName }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="gstNo">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>GSTNo</th>
-        <td mat-cell *matCellDef="let element">{{ element.gstNo }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="cityName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>City</th>
-        <td mat-cell *matCellDef="let element">{{ element.cityName }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="emailId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>EmailId</th>
-        <td mat-cell *matCellDef="let element">{{ element.eMailId }}</td>
+      <ng-container matColumnDef="dcDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>DCDate</th>
+        <td mat-cell *matCellDef="let element">{{ element.dcDate }}</td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
@@ -154,16 +142,6 @@
           >
             <mat-icon>edit</mat-icon>
           </button>
-          <button
-            mat-icon-button
-            matTooltip="print"
-            aria-label="button with a print icon"
-            class="ml-16"
-            color="accent"
-            (click)="printPO(element, $event)"
-          >
-            <mat-icon>print</mat-icon>
-          </button>
         </td>
       </ng-container>
 
@@ -172,6 +150,7 @@
           mat-cell
           *matCellDef="let element"
           [attr.colspan]="columnsToDisplay.length"
+          class="w-100"
         >
           <div
             [@detailExpand]="
@@ -185,18 +164,50 @@
                 multiTemplateDataRows
                 class="inner-table"
               >
-                <ng-container matColumnDef="fibreType">
-                  <th mat-header-cell *matHeaderCellDef>Fibre</th>
+                <ng-container matColumnDef="poNo">
+                  <th mat-header-cell *matHeaderCellDef>PONo</th>
                   <td mat-cell *matCellDef="let fibrePODt">
-                    {{ fibrePODt.fibreType }}
+                    {{ fibrePODt.poNo }}
                   </td>
                   <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
 
-                <ng-container matColumnDef="shadeName">
+                <ng-container matColumnDef="fibreTypeName">
+                  <th mat-header-cell *matHeaderCellDef>Fibre</th>
+                  <td mat-cell *matCellDef="let fibrePODt">
+                    {{ fibrePODt.fiberTypeName }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="fiberShadeName">
                   <th mat-header-cell *matHeaderCellDef>Shade</th>
                   <td mat-cell *matCellDef="let fibrePODt">
-                    {{ fibrePODt.shadeName }}
+                    {{ fibrePODt.fiberShadeName }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="lot">
+                  <th mat-header-cell *matHeaderCellDef>Lot</th>
+                  <td mat-cell *matCellDef="let fibrePODt">
+                    {{ fibrePODt.lot }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="receivedBales">
+                  <th mat-header-cell *matHeaderCellDef>Bales</th>
+                  <td mat-cell *matCellDef="let fibrePODt">
+                    {{ fibrePODt.receivedBales }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="hsnCode">
+                  <th mat-header-cell *matHeaderCellDef>HSNCode</th>
+                  <td mat-cell *matCellDef="let fibrePODt">
+                    {{ fibrePODt.hsnCode }}
                   </td>
                   <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
@@ -211,12 +222,12 @@
                   <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
 
-                <ng-container matColumnDef="weight">
+                <ng-container matColumnDef="receivedWeight">
                   <th mat-header-cell *matHeaderCellDef class="text-right">
                     Weight
                   </th>
                   <td mat-cell *matCellDef="let fibrePODt" class="text-right">
-                    {{ fibrePODt.weight }}
+                    {{ fibrePODt.receivedWeight }}
                   </td>
                   <td mat-footer-cell *matFooterCellDef class="text-right">
                     {{ getTotalWeight(element.fibrePODts) }}
@@ -228,7 +239,10 @@
                     Amount (Before tax)
                   </th>
                   <td mat-cell *matCellDef="let fibrePODt" class="text-right">
-                    {{ fibrePODt.rate * fibrePODt.weight | currency : "INR" }}
+                    {{
+                      fibrePODt.rate * fibrePODt.receivedWeight
+                        | currency : "INR"
+                    }}
                   </td>
                   <td mat-footer-cell *matFooterCellDef class="text-right">
                     {{ getTotalAmount(element.fibrePODts) | currency : "INR" }}
@@ -294,12 +308,12 @@
       <tr
         mat-row
         *matRowDef="let element; columns: columnsToDisplay"
-        id="{{ element.pono }}"
+        id="{{ element.recdDCNo }}"
         class="row"
         [class.expanded-row]="expandedElement === element"
         (click)="
           expandedElement = expandedElement === element ? null : element;
-          scrollInto(element.pono)
+          scrollInto(element.recdDCNo)
         "
       ></tr>
       <tr class="mat-row" *matNoDataRow>
