--- a/src/app/components/purchases/fibre/fibre-stock/fibre-stock.component.html
+++ b/src/app/components/purchases/fibre/fibre-stock/fibre-stock.component.html
@@ -87,7 +87,7 @@
       <mat-spinner></mat-spinner>
     </div>
     <div class="overflow-auto mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource">
+      <table mat-table [dataSource]="dataSource" class="table">
         <ng-container matColumnDef="sNo">
           <th mat-header-cell *matHeaderCellDef>S No</th>
           <td mat-cell *matCellDef="let element; let index = index">
