--- a/src/app/components/purchases/fibre/fibre-stock/fibre-stock.component.scss
+++ b/src/app/components/purchases/fibre/fibre-stock/fibre-stock.component.scss
@@ -31,6 +31,11 @@ h1 {
 
 .table-container {
   position: relative;
+  background-color: #fff;
+}
+
+.table {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .mat-mdc-header-row {
@@ -38,7 +43,6 @@ h1 {
 }
 
 .mat-mdc-paginator {
-  border-top: 1px solid #e0e0e0;
   padding: 8px 0;
 }
 
