--- a/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.html
+++ b/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <h1 class="header letter-spacing-1">Search Received Fibre PO</h1>
+  <h1 class="header letter-spacing-1">Search Received Fibre Order</h1>
   <section>
     <form class="form-container" [formGroup]="form">
       <mat-form-field appearance="fill" class="w-35">
@@ -89,6 +89,7 @@
     </form>
   </section>
 
+  <!-- DEVNOTE: need to add checkboc to filter conversion order-->
   <div class="overflow-auto mat-elevation-z8 table-container">
     <div *ngIf="loader" class="loader">
       <mat-spinner></mat-spinner>
@@ -168,6 +169,14 @@
                   <th mat-header-cell *matHeaderCellDef>PONo</th>
                   <td mat-cell *matCellDef="let fibrePODt">
                     {{ fibrePODt.poNo }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="poDate">
+                  <th mat-header-cell *matHeaderCellDef>PODate</th>
+                  <td mat-cell *matCellDef="let fibrePODt">
+                    {{ fibrePODt.poDate }}
                   </td>
                   <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
