--- a/src/app/components/production/mixing/mixing.component.html
+++ b/src/app/components/production/mixing/mixing.component.html
@@ -1,6 +1,8 @@
 <section class="container">
   <div class="header-container">
-    <h1 class="header letter-spacing-1">Mixing</h1>
+    <h1 class="header letter-spacing-1">
+      <span *ngIf="updateMixing">Update</span> Mixing
+    </h1>
     <button mat-raised-button color="primary" (click)="chooseProgram()">
       Choose Program for Mixing
     </button>
@@ -100,7 +102,7 @@
       </button>
     </div>
     <div class="overflow-auto mat-elevation-z8">
-      <table mat-table [dataSource]="mixingDetails">
+      <table mat-table [dataSource]="mixingDetails" #mixing>
         <ng-container matColumnDef="receivedDCNo">
           <th mat-header-cell *matHeaderCellDef>Received DC No</th>
           <td mat-cell *matCellDef="let element">
@@ -265,11 +267,29 @@
     </div>
   </div>
   <div class="footer">
-    <button mat-raised-button class="mr-16" (click)="resetData()">
+    <button
+      mat-raised-button
+      class="mr-16"
+      (click)="resetData()"
+      *ngIf="!updateMixing"
+    >
       <mat-icon>refresh</mat-icon>Reset
     </button>
-    <button mat-raised-button color="primary" (click)="submit()">
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="submit()"
+      *ngIf="!updateMixing"
+    >
       <mat-icon>save_alt</mat-icon>Submit
+    </button>
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="update()"
+      *ngIf="updateMixing"
+    >
+      <mat-icon>save_alt</mat-icon>Update
     </button>
   </div>
 </section>
