--- a/src/app/components/sales/search-sales-order/order-details/order-details.component.html
+++ b/src/app/components/sales/search-sales-order/order-details/order-details.component.html
@@ -115,7 +115,16 @@
 
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
-    <tr mat-footer-row *matFooterRowDef="columnsToDisplay; sticky: true"></tr>
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell no-rows" [attr.colspan]="columnsToDisplay.length">
+        No rows to display
+      </td>
+    </tr>
+    <tr
+      [hidden]="!orderDetails.orderDts.length"
+      mat-footer-row
+      *matFooterRowDef="columnsToDisplay"
+    ></tr>
   </table>
 </div>
 <div mat-dialog-actions class="footer">
