--- a/src/app/components/production/search-production/search-production.component.html
+++ b/src/app/components/production/search-production/search-production.component.html
@@ -103,12 +103,12 @@
   <div *ngIf="dataSource.data.length" class="text-right mb-4">
     &ast;Click the row to see the program details
   </div>
-  <div class="mat-elevation-z8 table-container">
+  <div class="mat-elevation-z8 table-container overflow-auto">
     <div *ngIf="loader" class="loader">
       <mat-spinner></mat-spinner>
     </div>
 
-    <table mat-table [dataSource]="dataSource" matSort>
+    <table mat-table [dataSource]="dataSource" matSort class="outer-table">
       <ng-container matColumnDef="productionId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Production Id</th>
         <td mat-cell *matCellDef="let row">{{ row.productionId }}</td>
