--- a/src/app/components/production/search-production/search-production.component.scss
+++ b/src/app/components/production/search-production/search-production.component.scss
@@ -46,6 +46,7 @@
 
 .table-container {
   position: relative;
+  background-color: #fff;
 }
 
 .loader {
@@ -64,4 +65,8 @@
 
 mat-icon {
   font-size: 20px;
+}
+
+.outer-table {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
