--- a/src/app/components/production/search-program/search-program.component.html
+++ b/src/app/components/production/search-program/search-program.component.html
@@ -14,7 +14,7 @@
         <mat-error>This field is required.</mat-error>
       </mat-form-field>
 
-      <mat-form-field appearance="fill" class="ml-24">
+      <mat-form-field appearance="fill" class="ml-24 w-30">
         <mat-label>Program Date Range</mat-label>
         <mat-date-range-input
           [rangePicker]="picker"
@@ -94,12 +94,12 @@
   <div *ngIf="dataSource.data.length" class="text-right mb-4">
     &ast;Click the row to see the program details
   </div>
-  <div class="mat-elevation-z8 table-container">
+  <div class="mat-elevation-z8 table-container overflow-auto">
     <div *ngIf="loader" class="loader">
       <mat-spinner></mat-spinner>
     </div>
 
-    <table mat-table [dataSource]="dataSource" matSort>
+    <table mat-table [dataSource]="dataSource" matSort class="outer-table">
       <ng-container matColumnDef="programId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Program Id</th>
         <td mat-cell *matCellDef="let row">{{ row.programId }}</td>
