--- a/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
+++ b/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
@@ -282,7 +282,7 @@
                 <tr
                   [hidden]="!element.fibrePODts?.length"
                   mat-footer-row
-                  *matFooterRowDef="innerDisplayedColumns; sticky: true"
+                  *matFooterRowDef="innerDisplayedColumns; sticky: false"
                 ></tr>
               </table>
             </div>
