--- a/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.html
+++ b/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.html
@@ -305,7 +305,7 @@
                 <tr
                   [hidden]="!element.fibrePODts?.length"
                   mat-footer-row
-                  *matFooterRowDef="innerDisplayedColumns; sticky: true"
+                  *matFooterRowDef="innerDisplayedColumns; sticky: false"
                 ></tr>
               </table>
             </div>
