--- a/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.scss
+++ b/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.scss
@@ -45,9 +45,8 @@ tr.row:not(.expanded-row) {
   margin-bottom: 24px;
   padding-top: 8px;
 
-  & .mdc-data-table__cell,
-  & .mdc-data-table__header-cell {
-    padding: 0 16px;
+  & .mat-mdc-footer-cell {
+    border-top: 1px solid #e0e0e0;
   }
 }
 
@@ -62,6 +61,11 @@ tr.row:not(.expanded-row) {
 
 .border-top {
   border-top: 1px solid rgba(0, 0, 0, 0.15);
+}
+
+.mdc-data-table__cell,
+.mdc-data-table__header-cell {
+  padding: 0 16px;
 }
 
 .mat-mdc-header-row {
