Updated mixing details in search program

--- a/src/app/components/production/search-program/program-details/program-details.component.html
+++ b/src/app/components/production/search-program/program-details/program-details.component.html
@@ -53,6 +53,22 @@
       class="table"
       *ngIf="programDetails.mixingDetails?.length"
     >
+      <ng-container matColumnDef="mixingId">
+        <th mat-header-cell *matHeaderCellDef>MixingId</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.mixingId }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <ng-container matColumnDef="mixingDate">
+        <th mat-header-cell *matHeaderCellDef>Mixing Date</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.mixingDate }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
       <ng-container matColumnDef="fiberCategory">
         <th mat-header-cell *matHeaderCellDef>Fiber Category</th>
         <td mat-cell *matCellDef="let element">
