--- a/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.html
+++ b/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.html
@@ -89,7 +89,13 @@
     </form>
   </section>
 
-  <!-- DEVNOTE: need to add checkboc to filter conversion order-->
+  <section class="stocks-btn" *ngIf="dataSource.data?.length">
+    <mat-checkbox
+      [formControl]="conversionOrderCheckbox"
+      (change)="filterResults()"
+      >Conversion orders only</mat-checkbox
+    >
+  </section>
   <div class="overflow-auto mat-elevation-z8 table-container">
     <div *ngIf="loader" class="loader">
       <mat-spinner></mat-spinner>
@@ -168,7 +174,7 @@
                 <ng-container matColumnDef="poNo">
                   <th mat-header-cell *matHeaderCellDef>PONo</th>
                   <td mat-cell *matCellDef="let fibrePODt">
-                    {{ fibrePODt.poNo }}
+                    {{ fibrePODt.poNo || "_" }}
                   </td>
                   <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
@@ -176,7 +182,7 @@
                 <ng-container matColumnDef="poDate">
                   <th mat-header-cell *matHeaderCellDef>PODate</th>
                   <td mat-cell *matCellDef="let fibrePODt">
-                    {{ fibrePODt.poDate }}
+                    {{ fibrePODt.poDate || "_" }}
                   </td>
                   <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
