--- a/src/app/components/production/search-program/program-details/program-details.component.html
+++ b/src/app/components/production/search-program/program-details/program-details.component.html
@@ -1,8 +1,18 @@
 <div class="header">
   <h1 mat-dialog-title>Program Details</h1>
-  <button mat-icon-button matTooltip="close" (click)="close()">
-    <mat-icon>close</mat-icon>
-  </button>
+  <div>
+    <button
+      mat-icon-button
+      matTooltip="{{ expanded ? 'collapse' : 'expand' }}"
+      (click)="expand()"
+    >
+      <mat-icon *ngIf="!expanded">fullscreen</mat-icon>
+      <mat-icon *ngIf="expanded">fullscreen_exit</mat-icon>
+    </button>
+    <button mat-icon-button matTooltip="close" (click)="close()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </div>
 </div>
 <div mat-dialog-content class="container word-break-all">
   <section class="details">
