--- a/src/app/components/production/search-program/program-details/program-details.component.html
+++ b/src/app/components/production/search-program/program-details/program-details.component.html
@@ -44,25 +44,28 @@
   <section class="mt-24">
     <div class="mixing">
       <span class="text-dark">Mixing Details:</span>
-      <button
-        *ngIf="programDetails.mixingDetails?.length"
-        mat-raised-button
-        color="primary"
-        (click)="updateMixing()"
-        class="ml-4"
-      >
-        <mat-icon>edit</mat-icon> Edit
-      </button>
     </div>
     <div class="mt-8" *ngIf="!programDetails.mixingDetails?.length">
       *No mixing details
     </div>
     <table
       mat-table
-      [dataSource]="programDetails.mixingDetails"
-      class="table"
-      *ngIf="programDetails.mixingDetails?.length"
+      [dataSource]="outerTable"
+      multiTemplateDataRows
+      class="w-100 outer-table"
+      matSort
     >
+      <ng-container matColumnDef="expand">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <mat-icon>{{
+            element === expandedElement
+              ? "keyboard_arrow_up"
+              : "keyboard_arrow_down"
+          }}</mat-icon>
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="mixingId">
         <th mat-header-cell *matHeaderCellDef>MixingId</th>
         <td mat-cell *matCellDef="let element">
@@ -79,79 +82,167 @@
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
-      <ng-container matColumnDef="fiberCategory">
-        <th mat-header-cell *matHeaderCellDef>Fiber Category</th>
+      <ng-container matColumnDef="totalIssued">
+        <th mat-header-cell *matHeaderCellDef>Total Issued Qty</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.fiberCategory }}
+          {{ getTotalMixingIssuedQty(element?.mixingId) }}
         </td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
-      <ng-container matColumnDef="fiberType">
-        <th mat-header-cell *matHeaderCellDef>Fiber Type</th>
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.fiberType }}
-        </td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-
-      <ng-container matColumnDef="fiberShade">
-        <th mat-header-cell *matHeaderCellDef>Fiber Shade</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.fiberShade }}
-        </td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-
-      <ng-container matColumnDef="receivedDCNo">
-        <th mat-header-cell *matHeaderCellDef>ReceivedDCNo</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.receivedDCNo }}
-        </td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-
-      <ng-container matColumnDef="receivedDate">
-        <th mat-header-cell *matHeaderCellDef>ReceivedDate</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.receivedDate }}
-        </td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-
-      <ng-container matColumnDef="lot">
-        <th mat-header-cell *matHeaderCellDef>Lot</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.lot }}
-        </td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-
-      <ng-container matColumnDef="issuedQuantity">
-        <th mat-header-cell *matHeaderCellDef class="text-right">
-          Issued Quantity
-        </th>
-        <td mat-cell *matCellDef="let element" class="text-right">
-          {{ element.issuedQuantity }}
-        </td>
-        <td mat-footer-cell *matFooterCellDef class="text-right">
-          {{ getTotalIssuedQty() }}
+          <button
+            mat-icon-button
+            matTooltip="edit"
+            aria-label="button with a edit icon"
+            (click)="updateMixing(element?.mixingId)"
+          >
+            <mat-icon>edit</mat-icon>
+          </button>
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="rate">
-        <th mat-header-cell *matHeaderCellDef class="text-right">Rate</th>
-        <td mat-cell *matCellDef="let element" class="text-right">
-          {{ element.rate | currency : "INR" }}
+      <ng-container matColumnDef="expandedDetail">
+        <td
+          mat-cell
+          *matCellDef="let element"
+          [attr.colspan]="mixingColumnsToDisplay.length"
+        >
+          <div
+            [@detailExpand]="
+              element === expandedElement ? 'expanded' : 'collapsed'
+            "
+          >
+            <div class="w-100 element-detail">
+              <table
+                mat-table
+                [dataSource]="getInnerTableData(element?.mixingId)"
+                multiTemplateDataRows
+                class="inner-table"
+              >
+                <ng-container matColumnDef="fiberCategory">
+                  <th mat-header-cell *matHeaderCellDef>Fiber Category</th>
+                  <td mat-cell *matCellDef="let element">
+                    {{ element.fiberCategory }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="fiberType">
+                  <th mat-header-cell *matHeaderCellDef>Fiber Type</th>
+                  <td mat-cell *matCellDef="let element">
+                    {{ element.fiberType }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="fiberShade">
+                  <th mat-header-cell *matHeaderCellDef>Fiber Shade</th>
+                  <td mat-cell *matCellDef="let element">
+                    {{ element.fiberShade }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="receivedDCNo">
+                  <th mat-header-cell *matHeaderCellDef>ReceivedDCNo</th>
+                  <td mat-cell *matCellDef="let element">
+                    {{ element.receivedDCNo }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="receivedDate">
+                  <th mat-header-cell *matHeaderCellDef>ReceivedDate</th>
+                  <td mat-cell *matCellDef="let element">
+                    {{ element.receivedDate }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="lot">
+                  <th mat-header-cell *matHeaderCellDef>Lot</th>
+                  <td mat-cell *matCellDef="let element">
+                    {{ element.lot }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="issuedQuantity">
+                  <th mat-header-cell *matHeaderCellDef class="text-right">
+                    Issued Quantity
+                  </th>
+                  <td mat-cell *matCellDef="let element" class="text-right">
+                    {{ element.issuedQuantity }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef class="text-right">
+                    {{ getTotalIssuedQty() }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="rate">
+                  <th mat-header-cell *matHeaderCellDef class="text-right">
+                    Rate
+                  </th>
+                  <td mat-cell *matCellDef="let element" class="text-right">
+                    {{ element.rate | currency : "INR" }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <tr
+                  mat-header-row
+                  *matHeaderRowDef="innerDisplayedColumns"
+                ></tr>
+                <tr
+                  mat-row
+                  *matRowDef="let address; columns: innerDisplayedColumns"
+                ></tr>
+                <tr class="mat-row" *matNoDataRow>
+                  <td
+                    class="mat-cell no-rows"
+                    [attr.colspan]="innerDisplayedColumns.length"
+                  >
+                    No rows to display
+                  </td>
+                </tr>
+                <tr
+                  [hidden]="!element.fibrePODts?.length"
+                  mat-footer-row
+                  *matFooterRowDef="innerDisplayedColumns; sticky: false"
+                ></tr>
+              </table>
+            </div>
+          </div>
         </td>
-        <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="mixingColumnsToDisplay"></tr>
-      <tr mat-row *matRowDef="let row; columns: mixingColumnsToDisplay"></tr>
       <tr
-        mat-footer-row
-        *matFooterRowDef="mixingColumnsToDisplay; sticky: false"
+        mat-row
+        *matRowDef="let element; columns: mixingColumnsToDisplay"
+        id="{{ element.pono }}"
+        class="row"
+        [class.expanded-row]="expandedElement === element"
+        (click)="
+          expandedElement = expandedElement === element ? null : element;
+          scrollInto(element.pono)
+        "
+      ></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td
+          class="mat-cell no-rows"
+          [attr.colspan]="mixingColumnsToDisplay.length"
+        >
+          No rows to display
+        </td>
+      </tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: ['expandedDetail']"
+        class="detail-row"
       ></tr>
     </table>
   </section>
