--- a/src/app/components/production/search-program/program-details/program-details.component.scss
+++ b/src/app/components/production/search-program/program-details/program-details.component.scss
@@ -39,6 +39,10 @@
   align-items: center;
 }
 
+mat-icon {
+  font-size: 20px;
+}
+
 .outer-table {
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
