--- a/src/app/components/sales/waste-order-delivery/waste-order-delivery.component.html
+++ b/src/app/components/sales/waste-order-delivery/waste-order-delivery.component.html
@@ -75,7 +75,7 @@
           Quantity(Kg)
         </th>
         <td mat-cell *matCellDef="let element" class="text-right">
-          {{ element.quantity | number : "1.0-3" }}
+          {{ element.stockQuantity | number : "1.0-3" }}
         </td>
         <td mat-footer-cell *matFooterCellDef class="text-right">
           {{ getTotalQuantity() | number : "1.0-3" }}
