--- a/src/app/components/sales/waste-order-delivery/waste-stock-dialog/waste-stock-dialog.component.html
+++ b/src/app/components/sales/waste-order-delivery/waste-stock-dialog/waste-stock-dialog.component.html
@@ -39,21 +39,13 @@
       </ng-container>
 
       <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef class="text-center">
-          <mat-checkbox
-            matTooltip="Select all"
-            [disabled]="dataSource.length ? null : true"
-            (change)="$event ? toggleAllRows() : null"
-            [checked]="selection.hasValue() && isAllSelected()"
-            [indeterminate]="selection.hasValue() && !isAllSelected()"
-          >
-          </mat-checkbox>
-        </th>
+        <th mat-header-cell *matHeaderCellDef class="text-center"></th>
         <td mat-cell *matCellDef="let row" class="text-center">
           <mat-checkbox
             (click)="$event.stopPropagation()"
             (change)="$event ? selection.toggle(row) : null"
             [checked]="selection.isSelected(row)"
+            *ngIf="!isAlreadySelected(row)"
           >
           </mat-checkbox>
         </td>
