--- a/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -177,7 +177,7 @@
 
   <div class="footer">
     <button mat-raised-button (click)="goToSearch()">
-      <mat-icon>arrow_back</mat-icon>Go to Search
+      <mat-icon>arrow_back</mat-icon>Back to search
     </button>
     <div *ngIf="!updatePoDetails; else updateBtn">
       <button mat-raised-button class="mr-16" (click)="resetData()">
