--- a/src/app/components/production/create-program/create-program.component.scss
+++ b/src/app/components/production/create-program/create-program.component.scss
@@ -7,14 +7,14 @@
 }
 
 .form-container {
-  padding: 32px 32px 4px 32px;
+  padding: 16px 32px 4px 32px;
 }
 
 .form-first-row {
   display: flex;
-  gap: 48px;
+  column-gap: 48px;
   align-items: flex-start;
-  margin-bottom: 32px;
+  margin-bottom: 16px;
 }
 
 .header {
