--- a/src/app/components/production/entry/production-entry/production-entry.component.scss
+++ b/src/app/components/production/entry/production-entry/production-entry.component.scss
@@ -19,9 +19,9 @@
 }
 
 .form-container {
-  padding: 32px 32px 24px;
+  padding: 16px 32px;
   display: flex;
-  gap: 24px;
+  column-gap: 24px;
   flex-wrap: wrap;
   justify-content: space-between;
 }
@@ -32,7 +32,7 @@
 }
 
 .production-date {
-  padding: 8px 16px 16px;
+  padding: 8px 16px 0 16px;
 }
 
 .button-container {
