--- a/src/app/components/production/entry/waste-entry/waste-entry.component.scss
+++ b/src/app/components/production/entry/waste-entry/waste-entry.component.scss
@@ -19,7 +19,7 @@
 }
 
 .form-container {
-  padding: 32px 32px 24px;
+  padding: 16px 32px;
   display: flex;
   gap: 24px;
   flex-wrap: wrap;
@@ -33,6 +33,10 @@
 
 .button-container {
   padding-bottom: 16px;
+}
+
+.mat-mdc-card-content:last-child {
+  padding-bottom: 0;
 }
 
 .mat-mdc-header-row {
