--- a/src/app/components/production/mixing/mixing.component.scss
+++ b/src/app/components/production/mixing/mixing.component.scss
@@ -19,15 +19,16 @@
 }
 
 .form-container {
-  padding: 32px 32px 24px;
+  padding: 16px 32px;
   display: flex;
   flex-wrap: wrap;
-  gap: 32px;
+  column-gap: 32px;
+  row-gap: 16px;
   justify-content: space-between;
 }
 
 .mixing-date {
-  padding: 8px 16px 16px;
+  padding: 8px 16px 0 16px;
 }
 
 .prog-details-container {
