--- a/src/app/components/purchases/fibre/fibre-receive-conversion-order/fibre-receive-conversion-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-conversion-order/fibre-receive-conversion-order.component.html
@@ -4,7 +4,7 @@
       >Receive Fibre Conversion Order</span
     >
     <ng-template #updateHeader
-      >Update Receive Fibre Conversion Order</ng-template
+      >Update Fibre Received for Conversion</ng-template
     >
   </h1>
   <mat-card class="party-card">
@@ -122,49 +122,9 @@
       <ng-container matColumnDef="hsnCode">
         <th mat-header-cell *matHeaderCellDef class="text-right">HSN Code</th>
         <td mat-cell *matCellDef="let element" class="text-right">
-          {{ element.hsnCode }}
+          {{ element.hsnCode || "_" }}
         </td>
         <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-
-      <ng-container matColumnDef="rate">
-        <th mat-header-cell *matHeaderCellDef class="text-right">Rate</th>
-        <td mat-cell *matCellDef="let element" class="text-right">
-          {{ element.rate | currency : "INR" }}
-        </td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-
-      <ng-container matColumnDef="amount">
-        <th mat-header-cell *matHeaderCellDef class="text-right">Amount</th>
-        <td mat-cell *matCellDef="let element" class="text-right">
-          {{ element.amount || 0 | currency : "INR" }}
-        </td>
-        <td mat-footer-cell *matFooterCellDef class="text-right">
-          {{ getAmount() | currency : "INR" }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="gstpercent">
-        <th mat-header-cell *matHeaderCellDef class="text-right">GST%</th>
-        <td mat-cell *matCellDef="let element" class="text-right">
-          {{ element.gstpercent | number : "1.2-2" }}%
-        </td>
-        <td mat-footer-cell *matFooterCellDef class="text-right">
-          {{ getTaxAmount() | currency : "INR" }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="totalAmount">
-        <th mat-header-cell *matHeaderCellDef class="text-right">
-          Total Amount
-        </th>
-        <td mat-cell *matCellDef="let element" class="text-right">
-          {{ element.totalAmount || 0 | currency : "INR" }}
-        </td>
-        <td mat-footer-cell *matFooterCellDef class="text-right">
-          {{ getTotalAmount() | currency : "INR" }}
-        </td>
       </ng-container>
 
       <ng-container matColumnDef="button">
