--- a/src/app/components/sales/create-sales-order/create-sales-order.component.scss
+++ b/src/app/components/sales/create-sales-order/create-sales-order.component.scss
@@ -12,12 +12,16 @@
   align-items: flex-start;
 
   &:not(:last-child) {
-    margin-bottom: 24px;
+    margin-bottom: 16px;
   }
 }
 
 .form {
-  padding: 32px 32px 16px 32px;
+  padding: 16px 32px 16px;
+}
+
+.mat-mdc-card-content:last-child {
+  padding-bottom: 0;
 }
 
 .header {
