--- a/src/app/components/sales/delivery-invoice/delivery-invoice.component.scss
+++ b/src/app/components/sales/delivery-invoice/delivery-invoice.component.scss
@@ -19,9 +19,13 @@
 }
 
 .form-container {
-  padding: 24px 32px 12px;
+  padding: 16px 32px;
   display: flex;
   gap: 48px;
+}
+
+.mat-mdc-card-content:last-child {
+  padding-bottom: 0;
 }
 
 table {
