--- a/src/app/components/sales/waste-order-delivery/waste-order-delivery.component.scss
+++ b/src/app/components/sales/waste-order-delivery/waste-order-delivery.component.scss
@@ -12,17 +12,21 @@
   align-items: flex-start;
 
   &:not(:last-child) {
-    margin-bottom: 24px;
+    margin-bottom: 16px;
   }
 }
 
 .form {
-  padding: 32px 32px 16px 32px;
+  padding: 16px 32px;
 }
 
 .header {
   font-weight: 500;
   margin: 40px 0;
+}
+
+.mat-mdc-card-content:last-child {
+  padding-bottom: 0;
 }
 
 .button-container {
