--- a/src/app/components/success-dialog/success-dialog.component.scss
+++ b/src/app/components/success-dialog/success-dialog.component.scss
@@ -1,36 +1,35 @@
 .banner {
-    background-color: #fff;
-    border-radius: 5px;
+  background-color: #fff;
+  border-radius: 5px;
 }
 
 .banner-header {
-    padding: 35px 60px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(10, 191, 107, 0.714);
+  padding: 16px 32px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(10, 191, 107, 0.714);
 }
 
 .banner-content {
-    padding: 35px 50px; 
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    align-items: center;
-    justify-content: center;
+  padding: 35px 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  align-items: center;
+  justify-content: center;
 }
 
 .success-img {
-    width: 100px;
-    height: 100px;
-    background: url('../../../assets/images/white-tick.png');
-    background-size: cover !important;
+  width: 50px;
+  height: 50px;
+  background: url("../../../assets/images/white-tick.png");
+  background-size: cover !important;
 }
 
-
 .close-button {
-    position: absolute;
-    top: 0;
-    right: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
