--- a/src/app/components/production/create-program/create-program.component.html
+++ b/src/app/components/production/create-program/create-program.component.html
@@ -12,10 +12,20 @@
     <mat-card-content>
       <form class="form-container" [formGroup]="form">
         <div class="form-first-row">
-          <div *ngIf="updateProgramDetails" class="w-20 pt-4">
-            <mat-label>Program Id</mat-label>
-            <div class="font-size-16">{{ updateProgramDetails.programId }}</div>
+          <div *ngIf="updateProgramDetails" class="w-20">
+            <label>Program Id</label>
+            <div class="font-size-16 text-gray pt-4">
+              {{ updateProgramDetails.programId }}
+            </div>
           </div>
+
+          <div *ngIf="updateProgramDetails" class="w-20">
+            <label>Program No</label>
+            <div class="font-size-16 text-gray pt-4">
+              {{ updateProgramDetails.programNo }}
+            </div>
+          </div>
+
           <mat-form-field appearance="fill" class="w-50">
             <mat-label>Shade</mat-label>
             <mat-select formControlName="shadeName">
