--- a/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.html
+++ b/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.html
@@ -89,7 +89,7 @@
     </form>
   </section>
 
-  <section class="stocks-btn" *ngIf="dataSource.data?.length">
+  <section class="stocks-btn" *ngIf="backupDatasource?.length">
     <mat-checkbox
       [formControl]="conversionOrderCheckbox"
       (change)="filterResults()"
