Added retain search for update program

--- a/src/app/components/production/create-program/create-program.component.html
+++ b/src/app/components/production/create-program/create-program.component.html
@@ -180,6 +180,14 @@
       </button>
       <button
         mat-raised-button
+        (click)="goToSearch()"
+        *ngIf="updateProgramDetails"
+        class="mr-16"
+      >
+        <mat-icon>arrow_back</mat-icon>Back to search
+      </button>
+      <button
+        mat-raised-button
         color="primary"
         (click)="updateProgram()"
         *ngIf="updateProgramDetails"
