--- a/src/app/components/production/mixing/mixing.component.scss
+++ b/src/app/components/production/mixing/mixing.component.scss
@@ -61,6 +61,11 @@ table {
   margin-top: 50px;
   display: flex;
   justify-content: flex-end;
+
+  .update-btn {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .cell-input {
